--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <div class="project">
         <h2>Cadastro de animais em java </h2><p>Projeto no qual aprofundei minhas práticas em Java com orientação a objetos, desenvolvendo classes de animais, implementando herança e atribuições específicas para cada categoria.</p><a href="https://github.com/Fabricio-bg/Java-Projects/tree/main/Facens%20Java/Animal/Animal/src">link</a></li>
         <h2>Sistema bancário Java</h2><p>Projeto onde desenvolvi um sistema bancário em Java.</p><a href="https://github.com/Fabricio-bg/Java-Projects/tree/main/Facens%20Java/Banco/src">link</a></li>
-        <h2>Sistema bancário Python</h2><p>Aqui também desenvolvi um sistema bancário mas dessa em python</p><a href="https://github.com/Fabricio-bg/Exercicios-python/blob/main/sistemBancario.py">link</a></li>
+        <h2>Sistema bancário Python</h2><p>Aqui também desenvolvi um sistema bancário em python</p><a href="https://github.com/Fabricio-bg/Exercicios-python/blob/main/sistemBancario.py">link</a></li>
     </div>
     <br>
     <footer>
