--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 
     <nav>
         <ul>
-            <li><a href="">Linkedin</a></li>
-            <li><a href="">Github</a></li>
-            <li><a href="">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/fabricio-bernardes-gomes?">Linkedin</a></li>
+            <li><a href="https://github.com/Fabricio-bg">Github</a></li>
+            <li><a href="https://www.facebook.com/share/192SaHtPg6/">Facebook</a></li>
             <li>Celular:(15)996838059</li>
         </ul>
     </nav><br>
